# cicd_chest_disease

./: Dockerfile  Makefile  pyproject.toml
.github/workflows/: ci-tests.yml
mlruns/0/: meta.yaml
mlruns/378741507657564945/: meta.yaml
outputs/2023-09-01/12-52-00/.hydra/: hydra.yaml
outputs/2023-09-01/12-52-17/.hydra/: hydra.yaml
outputs/2023-09-01/12-53-23/.hydra/: hydra.yaml
outputs/2023-09-01/13-03-07/.hydra/: hydra.yaml
outputs/2023-09-01/13-04-23/.hydra/: hydra.yaml
outputs/2023-09-01/13-28-45/.hydra/: config.yaml  hydra.yaml
outputs/2023-09-01/13-30-11/.hydra/: hydra.yaml
outputs/2023-09-01/14-02-56/.hydra/: hydra.yaml
src/: main.py  processing.py  train.py  validate.py
tests/: model_test.py
